# oh-my-pi

./: .gitignore  AGENTS.md  Cargo.toml  PLAN_FIX_689.md  PLAN_FIX_689_PHASE2.md  bunfig.toml  justfile  package.json  pyproject.toml  rust-toolchain.toml
.github/: VOUCHED.td
.omp/commands/: fix-issues.md  review-prs.md
crates/pi-natives/: Cargo.toml
crates/pi-natives/src/: crash_handler.rs  html.rs  image.rs  lib.rs  shell.rs  task.rs
crates/pi-shell/src/: process.rs  shell.rs
crates/pi-shell/src/minimizer/filters/: python.rs
docs/: custom-tools.md  extensions.md  keybindings.md  resolve-tool-runtime.md  session-operations-export-share-fork-resume.md  skills.md
docs/skills/: authoring-extensions.md
docs/tools/: dstui.md  eval.md
python/omp-rpc/src/omp_rpc/: client.py
python/robomp/src/: server.py
python/robomp/tests/: test_worker.py
scripts/: ci-build-native.ts  ci-release-verify-natives.ts  ci-test-ts.ts
src/robomp/: cli.py  config.py  db.py  github_client.py  github_events.py  host_tools.py  logging_config.py  manual_triage.py  persona.py  queue.py  sandbox.py  server.py  tasks.py  worker.py
src/robomp/prompts/: directive.md  kickoff_directive.md
tests/: conftest.py  test_config.py  test_db.py  test_github_client.py  test_github_events.py  test_host_tools.py  test_sandbox.py  test_server.py  test_worker_smoke.py
types/assets/: index.d.ts
